Edit file .cpanel.yml

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/lzrioghz/public_html/
-    - /bin/cp -R wp-content $DEPLOYPATH
-    - /bin/cp index.html $DEPLOYPATH
+    - export PROJECTROOT=/home/lzrioghz/public_html
+    - /bin/cp $PROJECTROOT/gitpush/* $DEPLOYPATH
